# exactNNS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
include/: exactnns.h  imisequence.h  imisequence2d.h  kmeans.h  metric.h  search.h  util.h
include/PQ/: PQ.h
include/common/: matrix.h
include/imi/: imisequence.h
include/kmeans/: abstractkmeans.h  cluster.h  kballs.h  kmeans.h  kmeans_abstract.h  kmeans_radius.h  kmeans_standard.h  point.h
include/miniball/: miniball.hpp
