cmake_minimum_required(VERSION 2.8)
project(exactNNS)

IF(WIN32)
    IF(CMAKE_CL_64)
        IF(${CMAKE_BUILD_TYPE} MATCHES "Debug")
            SET(SAVE_CLASS x64/Debug)
        ELSE()
            SET(SAVE_CLASS x64/Release)
        ENDIF()
    ELSE()
        IF(${CMAKE_BUILD_TYPE} MATCHES "Debug")
            SET(SAVE_CLASS x86/Debug)
        ELSE()
            SET(SAVE_CLASS x86/Release)
        ENDIF()
    ENDIF()
ELSEIF(LINUX)
    SET(SAVE_CLASS linux)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    link_libraries(-lpthread)
ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    link_libraries(-lpthread)
ENDIF()


add_executable(exactNNS main.cpp)